@@ -7,6 +7,11 @@ Broker:
 - Ensure that QoS 2 queued messages are sent out in a timely manner.
 - Local bridges now act on clean_session correctly.
 
+Library:
+- Don't produce return error from mosquitto_loop() if a system call is
+  interrupted. This prevents disconnects/reconnects in threaded mode and
+  simplifies non-threaded client handling.
+
 Client:
 - Fix "mosquitto_pub -l -q 2" disconnecting before all messages were
   transmitted.
